# hybrid-compiler-evaluation

./: .gitignore  README.md  all_results.txt  averaged_results  processed_results.txt  requirements.txt  run_bench.py
cudacpp/: b4  bench1.cu  bench10.cu  bench2.cu  bench3.cu  bench4.cu  bench5.cu  bench6.cu  bench7.cu  bench8.cu  bench9.cu
numba/: complex_matrix_multiplication.py  fast_fourier_transform.py  float_matrix_multiplication.py  main.py  mandelbrot.py  reduction.py
rust/: Cargo.toml  rust-toolchain
rust/src/: complex_matrix_multiplication.rs  fast_fourier_transform.rs  float_matrix_multiplication.rs  main.rs  mandelbrot.rs  reduction.rs
